# ray-tracer

./: .clang-tidy  .gitignore  .gitmodules  BounceFilterTest.json  CBGMD_1k.json  CBGMD_1k_clean.json  CBGMD_fast.json  CBGMD_stochastic128.json  CMakeLists.txt  CornellBox.json  CornellBoxArea.json  CornellBoxAreaProbe.json  CornellBoxCameraMoveTranslate.json  CornellBoxCameraMoveTranslateStatic.json  CornellBoxCameraPan.json  CornellBoxCameraPanStatic.json  CornellBoxFan.json  CornellBoxFanProbe.json  CornellBoxGlass.json  CornellBoxGlassMirrorDiffuse.json  CornellBoxGlassMirrorDiffuseProbe.json  CornellBoxGlassProbe.json  CornellBoxMirrorKnot.json  CornellBoxMirrorKnotProbe.json  CornellBoxPoint.json  CornellBoxPointShadow.json  CornellBoxQuads.json  CornellBoxRGBLights.json  D1-hi.json  D3-hi.json  D9-hi.json  DESIGN.md  Daughter1.json  Daughter3.json  Daughter9.json  GlassBright.json  GlassCaustic.json  GlassFast.json  LICENSE  LightFilterTest.json  (+22 more)
.github/workflows/: cmake.yml
docs/: test-plan-fable-2026-06.md
editor/: AUTOMATION.md  AutomationServer.cpp  AutomationServer.h  EditorApp.cpp  EditorApp.h  GlHeaders.h  InputEvent.h  LayoutRegistry.h  ObjLoader.cpp  OrbitCamera.h  PngExport.cpp  PngExport.h  RasterMesh.cpp  RasterMesh.h  Scene.h  SceneModelLoader.cpp  SceneModelLoader.h  SceneModelSerializer.cpp  SceneModelSerializer.h  Shaders.h  ViewportGrid.cpp  ViewportGrid.h  main.cpp
editor/tools/: editor_client.py
include/: AngleGenerator.h  AnimationQuery.h  AreaLight.h  BounceCloud.h  BounceStore.h  Bounds.h  Buffer.h  Camera.h  CauchyMaterial.h  Color.h  Contracts.h  DensityGrid.h  DielectricMaterial.h  DiffuseMaterial.h  EmissiveGather.h  Emitter.h  EmitterPatch.h  EmitterQueue.h  EmittingQueue.h  EnumFlag.h  Flux.h  Gather.h  HashGrid.h  Hit.h  Image.h  LambertianMaterial.h  Library.h  Light.h  LightQueue.h  Material.h  MaterialLibrary.h  Mesh.h  MeshLibrary.h  MeshVolume.h  MicrofacetMaterial.h  MirrorGather.h  MirrorMaterial.h  ObjReader.h  Object.h  OmniLight.h  (+37 more)
scripts/: noise_metric.py  seam_check.py
src/: AngleGenerator.cpp  AreaLight.cpp  BounceCloud.cpp  BounceStore.cpp  Bounds.cpp  Buffer.cpp  Camera.cpp  CauchyMaterial.cpp  Color.cpp  DensityGrid.cpp  DielectricMaterial.cpp  DiffuseMaterial.cpp  EmissiveGather.cpp  EmitterPatch.cpp  Gather.cpp  HashGrid.cpp  Hit.cpp  Image.cpp  LambertianMaterial.cpp  Library.cpp  Light.cpp  LightQueue.cpp  Material.cpp  MaterialLibrary.cpp  MeshLibrary.cpp  MeshVolume.cpp  MicrofacetMaterial.cpp  MirrorGather.cpp  MirrorMaterial.cpp  ObjReader.cpp  Object.cpp  OmniLight.cpp  ParallelLight.cpp  PhotonQueue.cpp  Plane.cpp  PlaneVolume.cpp  PngWriteSession.cpp  PngWriter.cpp  Point.cpp  ProbeGather.cpp  (+22 more)
tests/: CMakeLists.txt  FurnaceFixture.h  RenderFixture.h  StatAssert.h  test_AnimatedGather.cpp  test_AreaLight.cpp  test_AutomationServer.cpp  test_BSDF.cpp  test_BSDFConsistency.cpp  test_BounceStore.cpp  test_BounceStoreEmitterOverflow.cpp  test_Bounds.cpp  test_CameraExposure.cpp  test_CameraMotionBlur.cpp  test_CameraProjection.cpp  test_CameraRoundTrip.cpp  test_Contracts.cpp  test_CountEquivalence.cpp  test_DecayTermination.cpp  test_DensityGrid.cpp  test_DepthOfField.cpp  test_Determinism.cpp  test_Dielectric.cpp  test_EmissiveGather.cpp  test_Emitter.cpp  test_FurnaceLedger.cpp  test_GatherRadianceUnit.cpp  test_HashGrid.cpp  test_InverseSquareFalloff.cpp  test_MinorityFresnelGather.cpp  test_MirrorCornerBlackDots.cpp  test_MirrorDirectParity.cpp  test_MirrorGather.cpp  test_MultiCameraProbe.cpp  test_OrbitCamera.cpp  test_PngExport.cpp  test_PngWriteSession.cpp  test_PngWriter.cpp  test_ProbeDefaults.cpp  test_ProbeGather.cpp  (+12 more)
